--- a/src/main/resources/fxml/HomeScreen.fxml
+++ b/src/main/resources/fxml/HomeScreen.fxml
@@ -24,6 +24,19 @@
                 </ImageView>
             </VBox>
             
+            <Button fx:id="settingsButton" styleClass="login-button" style="-fx-background-color: rgba(0,0,0,0.5); -fx-cursor: hand;" StackPane.alignment="TOP_LEFT">
+                <graphic>
+                    <SVGPath content="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.04.24.24.41.48.41h-3.84c.24 0 .43-.17.47-.41l.36-2.54c.59-.24 1.13-.57 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61l-2.01-1.58zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6z" 
+                             fill="WHITE" scaleX="1.2" scaleY="1.2"/>
+                </graphic>
+                <tooltip>
+                    <Tooltip text="Ajustes"/>
+                </tooltip>
+                <StackPane.margin>
+                    <Insets top="20" left="20"/>
+                </StackPane.margin>
+            </Button>
+
             <Button fx:id="loginButton" styleClass="login-button" style="-fx-background-color: rgba(0,0,0,0.5); -fx-cursor: hand;">
                 <graphic>
                     <SVGPath content="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z" 
@@ -69,21 +82,24 @@
                 </Button>
             </HBox>
             
-            <!-- Settings Button -->
-            <Button fx:id="settingsButton" text="⚙ Ajustes" 
-                    styleClass="create-project-button">
-                 <font>
-                    <Font size="14"/>
-                </font>
-            </Button>
+
             
             <!-- Projects Section -->
             <VBox spacing="15" VBox.vgrow="ALWAYS">
-                <Label text="Mis Proyectos" styleClass="section-title">
-                    <font>
-                        <Font name="System Bold" size="20"/>
-                    </font>
-                </Label>
+                <HBox alignment="CENTER_LEFT" spacing="10">
+                    <Label text="Mis Proyectos" styleClass="section-title">
+                        <font>
+                            <Font name="System Bold" size="20"/>
+                        </font>
+                    </Label>
+                    <Button fx:id="sortProjectsButton" style="-fx-background-color: transparent; -fx-cursor: hand; -fx-padding: 0;">
+                        <graphic>
+                            <!-- Default: Descending (Newest First) -> Calendar Top -->
+                            <SVGPath content="M3 18h12v-2H3v2zM3 13h10v-2H3v2zM3 8h8v-2H3v2zM15 3h1V1h2v2h2V1h1v2h1c1.1 0 2 .9 2 2v6c0 1.1-.9 2-2 2h-8c-1.1 0-2-.9-2-2V5c0-1.1.9-2 2-2h1V3zm7 8V7h-8v4h8z" fill="#cccccc" scaleX="1.2" scaleY="1.2"/>
+                        </graphic>
+                        <tooltip><Tooltip text="Ordenar proyectos"/></tooltip>
+                    </Button>
+                </HBox>
                 
                 <!-- Projects Grid in ScrollPane -->
                 <ScrollPane fx:id="projectsScrollPane" fitToWidth="true" styleClass="projects-scroll" 
